--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Hk Grotesk';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/HKGrotesk-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Jost-Regular.ttf') format('woff');
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,6 +21,7 @@
 html, body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Jost';
 }
 
 a {
