Added hamburger menu for smaller screens

--- a/components/navbar/nabaritem.module.css
+++ b/components/navbar/nabaritem.module.css
@@ -1,13 +1,9 @@
 .navbarItem {
-    color: black;
+    color: whitesmoke;
 }
 
 .navbarItem:hover {
     border-bottom: 5px solid red;
     transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
     color: red;
-}
-
-.navbarItem:active {
-    color:red;
 }
