--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,18 @@ html, body {
   overflow-x: hidden;
   font-family: 'Jost';
 }
+body {
+  background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
+  background-size: 100vw 100vh;
+}
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@media (max-width: 720px) {
+  body{
+    background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
+  }
 }
