--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,8 +33,42 @@ a {
   text-decoration: none;
 }
 
+#navbarOpened {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.306);
+  gap: 3rem;
+  font-size: 145%;
+  z-index: 3;
+  /* transition: all 2s cubic-bezier(1, 0.68, 0.16, 0.9); */
+  /* -webkit-transition: all 1s ease-in-out;
+  transition: all 3s ease-in-out;
+  transition: 3s; */
+}
+
+
 @media (max-width: 720px) {
   body{
     background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
   }
+}
+
+@media (max-width: 399px) {
+  .hamburger {
+    display: block;
+    float: right;
+  }
+
+  .open .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .open .bar:nth-child(1) {
+    transform: translateY(0.5rem) rotate(45deg);
+  }
+
+  .open .bar:nth-child(3) {
+    transform: translateY(-0.5rem) rotate(-45deg);
+  }
+
 }
