--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -22,6 +22,7 @@
         gap: 1.5rem;
         font-size: 125%;
         padding-right: 2rem;
+        background-color: rgba(0, 0, 0, 0.954);
     }
 }
 
