--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,7 @@ html, body {
 body {
   background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
   background-size: 100vw 100vh;
+  color: whitesmoke;
 }
 
 a {
@@ -37,6 +38,7 @@ a {
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.306);
+  background-color: black;
   gap: 3rem;
   font-size: 145%;
   z-index: 3;
