--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -22,18 +22,19 @@
     .heroContent {
         padding: 3rem 2rem 3rem 3rem;
         text-align: left;
-        font-size: 125%;
+        font-size: 150%;
     }
 }
 
 @media (min-width: 600px) {
     .heroContent {
-        font-size: 145%;
+        font-size: 200%;
+        padding: 4rem 3rem;
     }
 }
 
 @media (min-width: 900px) {
     .heroContent {
-        font-size: 160%;
+        font-size: 250%;
     }
 }
