--- a/components/navbar/navbaritem.module.css
+++ b/components/navbar/navbaritem.module.css
@@ -1,3 +1,7 @@
+.navbarItem {
+    border-bottom: 5px solid rgba(255, 255, 255, 0);
+}
+
 .navbarItem:hover {
     border-bottom: 5px solid red;
     transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
