--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,12 +17,16 @@
   padding: 0;
   margin: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 html, body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: 'Jost';
 }
+
 body {
   background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
   background-size: 100vw 100vh;
