Added one Work Item

--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -5,6 +5,15 @@
     width: fit-content;
     align-self: center;
 }
+.workLink {
+    padding: 0.6rem 2rem;
+    border-bottom: 1px solid red;
+}
+.workLink:hover, .workLink:focus {
+    background-color: red;
+    transition: all 0.35s cubic-bezier(1, 0.68, 0.16, 0.9);
+}
+
 @media (min-width: 400px) {
     .hero {
         align-self: flex-start;
