--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -4,3 +4,11 @@
     background-color: black;
     border-top: 1px solid rgba(255, 255, 255, 0.356);
 }
+
+.contactDetails {
+    max-width: 1250px;
+    display: grid;
+    gap: 2rem;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+}
