--- a/components/contact/contactform.module.css
+++ b/components/contact/contactform.module.css
@@ -38,6 +38,8 @@
 .inputField {
     padding: 0.5rem 1rem;
     font-size: 1rem;
+    background-color: whitesmoke;
+    border-radius: 5px;
 }
 .textArea {
     font-family: 'Jost';
