--- a/components/contact/contact.module.css
+++ b/components/contact/contact.module.css
@@ -10,5 +10,5 @@
     display: grid;
     gap: 2rem;
     align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+    grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
 }
