--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -2,7 +2,8 @@
     padding: 1rem 1rem;
     justify-content: space-around;
     position: fixed;
-    width: 100vw;
+    width: 100%;
+    max-width: 82.5rem;
     font-size: 5vw;
     background-color: rgba(0, 0, 0, 0.774);
     z-index: 2;
@@ -23,7 +24,6 @@
         gap: 1.5rem;
         font-size: 125%;
         padding-right: 2rem;
-        background-color: rgba(0, 0, 0, 0.774);
     }
 }
 
