--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,13 +22,15 @@ html {
 }
 
 html, body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  /* max-width: 1320px; */
+  /* overflow-x: hidden; */
   font-family: 'Jost';
 }
 
 body {
-  background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
+  margin: 0 auto;
+  max-width: 1320px;
+  background: rgba(0, 0, 0, 0.95) url('../public/images/header.jpg') top no-repeat;
   background-size: 100vw 100vh;
   color: whitesmoke;
 }
