Added Footer Section. Made wrapper component more reusable. Added optional custom titles to icons. Set max-width for html document to make sure document is centered.

--- a/components/paddingWrapper/wrapper.module.css
+++ b/components/paddingWrapper/wrapper.module.css
@@ -1,6 +1,12 @@
-.padding {
-    padding-top: 5rem;
+.padding-top-lg {
+    padding: 5rem 0 0;
 }
-.bgColor {
+
+.padding-sm {
+    padding: 2rem 0;
+}
+
+.footerStyles {
+    border-top: 1px solid rgba(255, 255, 255, 0.356);
     background-color: black;
 }
