--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,4 +1,16 @@
 .container {
     background-color: black;
-    text-align: center;
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    /* padding: 0 0 2rem 0; */
+}
+.link {
+    width: 2.5rem;
+    align-self: center;
+}
+
+.link:hover {
+    transform: scale(1.5);
+    transition: all 0.35s cubic-bezier(1, 0.68, 0.16, 0.9);
 }
