--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,14 +22,12 @@ html {
 }
 
 html, body {
-  /* max-width: 1320px; */
-  /* overflow-x: hidden; */
   font-family: 'Jost';
 }
 
 body {
   margin: 0 auto;
-  max-width: 1320px;
+  max-width: 82.5rem;
   background: rgba(0, 0, 0, 0.95) url('../public/images/header.jpg') top no-repeat;
   background-size: 100vw 100vh;
   color: whitesmoke;
@@ -57,7 +55,7 @@ a {
 
 @media (max-width: 720px) {
   body{
-    background: rgba(0, 0, 0, 0.9) url('../public/images/header.jpg') top no-repeat;
+    background: rgba(0, 0, 0, 0.95) url('../public/images/header.jpg') top no-repeat;
   }
 }
 
