--- a/components/works/myworks.module.css
+++ b/components/works/myworks.module.css
@@ -1,12 +1,10 @@
 .container {
     margin-top: 5rem;
-    padding: 4rem 2rem;
-    padding-top: 4rem;
+    padding: 4rem 2rem 2rem;
     background-color: black;
 }
 
 .worksList {
     display: flex;
     flex-direction: column;
-    gap: 8rem;
 }
