--- a/components/works/workitem.module.css
+++ b/components/works/workitem.module.css
@@ -1,7 +1,6 @@
 .container {
     display: grid;
-    gap: 1.2rem;
-    max-width: 1250px;
+    max-width: 78.125rem;
 }
 
 .workImage {
@@ -11,14 +10,17 @@
 }
 
 .workDetails {
+    padding-top: 1.2rem;
     font-size: 120%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
+
 .workDetails p, .workDetails ul {
     font-size: 1rem;
 }
+
 .language {
     list-style-type: none;
     padding-left: 1rem;
@@ -36,7 +38,7 @@
 
 .workItemLinks {
     display: flex;
-    padding: 1rem 0;
+    padding: 1rem 0 0;
     flex-direction: row;
     max-height: min-content;
     gap: 1.5rem;
@@ -58,7 +60,6 @@
     .workImage {
         max-width: 36rem;
         max-height: 20rem;
-        /* object-fit: contain; */
     }
     .workImage, .workDetails {
         align-self: center;
