--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -15,6 +15,20 @@
         max-width: 80vw;
         border-radius: 0 0.3125rem 0.3125rem 0;
     }
+
+    .navbarOpened {
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(255, 255, 255, 0.306);
+        background-color: black;
+        gap: 3rem;
+        font-size: 145%;
+        z-index: 3;
+        /* transition: all 2s cubic-bezier(1, 0.68, 0.16, 0.9); */
+        /* -webkit-transition: all 1s ease-in-out;
+        transition: all 3s ease-in-out;
+        transition: 3s; */
+    }
 }
 
 @media (min-width: 400px) {
